<resources>
    <string name="app_name">MyHeart</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choose">Choose Item</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="hello">hello</string>
    <string name="pluem">pluem</string>
    <string name="Hello">Hello</string>
    <string name="everyone">everyone</string>
    <string name="Everyone">Everyone\n</string>
    <string name="search_elements">Search elements</string>
    <string name="profile">Profile</string>
    <string name="match">Match</string>
    <string name="select">Select</string>
    <string name="ให้คำปรึกษา">ให้คำปรึกษา</string>
    <string name="รับคำปรึกษา">รับคำปรึกษา</string>
    <string name="back">Back</string>
    <string name="you">You</string>
    <string name="You">You</string>
    <string name="Guys">Guys</string>
    <string name="chat">CHAT</string>
    <string name="write_here">write here</string>
    <string name="search_chat">Search Chat</string>
    <string name="hi">Hi</string>
    <string name="status">status</string>
    <string name="select_your_status">select_your_status</string>
    <string name="Choose">Choose</string>
    <string name="nickname">Nickname</string>
    <string name="consult">consult</string>
    <string name="Consult">Consult</string>
    <string name="โปรไฟล์">โปรไฟล์</string>
    <string name="Profile">Profile</string>
</resources>