<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <RelativeLayout
       android:id="@+id/layoutHeader"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/header_background"
       android:backgroundTint="@color/pink"
       android:padding="10dp"
       app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/textHello"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:text="@string/Hello"
          android:textColor="@color/dark_white"
          android:textSize="25sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_toRightOf="@id/textHello"
          android:text="@string/everyone"
          android:textColor="@color/colorWhite"
          android:textSize="25sp"
          android:textStyle="bold"
          app:layout_constraintStart_toEndOf="@id/textHello"
          app:layout_constraintTop_toTopOf="parent" />

   </RelativeLayout>

   <ScrollView
       android:id="@+id/scrollView2"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:overScrollMode="never"
       android:scrollbars="none"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@id/layoutHeader"
       app:layout_constraintVertical_bias="0.0"
       tools:layout_editor_absoluteX="-55dp">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <LinearLayout
             android:id="@+id/layoutheart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:background="@drawable/white_rectangle_background"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="15dp"
             app:layout_constraintDimensionRatio="H, 1:1"
             app:layout_constraintEnd_toStartOf="@id/layoutprofile"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:src="@drawable/heart" />

            <Button
                android:id="@+id/match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:gravity="center"
                android:text="@string/match"
                android:textColor="@color/dark_white"
                android:textColorLink="#ff6750a4"
                android:textSize="20sp"
                android:textStyle="bold" />

         </LinearLayout>

         <LinearLayout
             android:id="@+id/layoutprofile"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:background="@drawable/white_rectangle_background"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="15dp"
             app:layout_constraintDimensionRatio="H, 1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/layoutheart"
             app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:src="@drawable/contact" />
            <Button
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:gravity="center"
                android:text="Contact"
                android:textColor="@color/dark_white"
                android:textColorLink="#ff6750a4"
                android:textSize="20sp"
                android:textStyle="bold"/>



         </LinearLayout>

         <LinearLayout
             android:id="@+id/layoutcontact"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:background="@drawable/white_rectangle_background"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="15dp"
             app:layout_constraintDimensionRatio="H, 1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layoutheart">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:src="@drawable/profile" />

            <Button
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/dark_white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

         </LinearLayout>

      </androidx.constraintlayout.widget.ConstraintLayout>


   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>